--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.hanlie.mobisuts_2111500077">
 
     <uses-sdk
         android:minSdkVersion="21"
-        android:targetSdkVersion="34" />
+        android:targetSdkVersion="34"
+        tools:ignore="GradleOverrides,OldTargetApi" />
 
     <application
         android:allowBackup="true"
@@ -15,19 +17,25 @@
         android:roundIcon="@mipmap/ic_logo"
         android:supportsRtl="true"
         android:testOnly="true"
-        android:theme="@style/Theme.Mobisuts_2111500077">
+        android:theme="@style/Theme.Mobisuts_2111500077"
+        tools:ignore="AllowBackup,HardcodedDebugMode"
+        tools:targetApi="p">
+        <activity
+            android:name=".DaftarAkun"
+            android:exported="true"
+            android:label="@string/hal_daftar"/>
 
         <activity
-            android:name="com.hanlie.mobisuts_2111500077.SplashScreen"
+            android:name=".SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name="com.hanlie.mobisuts_2111500077.MainActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Mobisuts_2111500077.NoActionBar" />
@@ -35,7 +43,8 @@
         <provider
             android:name="androidx.startup.InitializationProvider"
             android:authorities="com.hanlie.mobisuts_2111500077.androidx-startup"
-            android:exported="false">
+            android:exported="false"
+            tools:ignore="MissingClass">
             <meta-data
                 android:name="androidx.emoji2.text.EmojiCompatInitializer"
                 android:value="androidx.startup" />
@@ -50,7 +59,6 @@
         <uses-library
             android:name="androidx.window.sidecar"
             android:required="false" />
-
     </application>
 
 </manifest>
