--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,18 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.hanlie.mobisuts_2111500077">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <uses-sdk
         android:minSdkVersion="21"
         android:targetSdkVersion="34"
         tools:ignore="GradleOverrides,OldTargetApi" />
 
     <application
+        android:name=".ClassGlobal"
         android:allowBackup="true"
         android:appComponentFactory="androidx.core.app.CoreComponentFactory"
         android:debuggable="true"
         android:icon="@mipmap/ic_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_logo"
+        android:largeHeap="true"
+        android:usesCleartextTraffic="true"
+        android:roundIcon="@mipmap/ic_logo_round"
         android:supportsRtl="true"
         android:testOnly="true"
         android:theme="@style/Theme.Mobisuts_2111500077"
@@ -59,6 +64,10 @@
         <uses-library
             android:name="androidx.window.sidecar"
             android:required="false" />
+
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false"/>
     </application>
 
 </manifest>
